src/index.css
@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap");
@font-face {
    font-family: "Cascadia Code";
    src: url("/public/fonts/CascadiaCode-Regular.woff2") format("woff2");
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "Cascadia Code";
    src: url("/public/fonts/CascadiaCode-Bold.woff2") format("woff2");
    font-weight: 700;
    font-style: normal;
}

@font-face {
    font-family: "Cascadia Code";
    src: url("/public/fonts/CascadiaCode-Italic.woff2") format("woff2");
    font-weight: 700;
    font-style: italic;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

html,
body {
    overflow-x: hidden;
}

@layer components {
    .max-container {
        max-width: 1240px;
        margin: 0 auto;
    }
}

@layer utilities {
    .animation-delay-2000 {
        animation-delay: 2s;
    }
    .animation-delay-4000 {
        animation-delay: 4s;
    }
}

